add tests controller